# LatticeCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  debug.sh  run.sh  setup.sh  tidy.sh  winsetup.sh
Debug/: callgraph.sh  debug.bat  debug.sh  libfmod.so.10.0
Debug/bitmap/: actors.xcf  bigdiff.xcf  bigtone.xcf  clouds.xcf  compass.xcf  diffuse.xcf  inventory.xcf  items24.xcf  mining.xcf  particles.xcf  quickbar.xcf  selection.xcf  tonemap.xcf  workbench.xcf
Debug/bitmap/Items/: merge.bat
Debug/bitmap/moon/: split moon.bat
Debug/bitmap/old/: bigdiff.xcf  bigtone24.xcf  bigtone8.xcf  bigtone_alpha.xcf  bitmap  merge BIGtone.bat  merge CLOUDS.bat  merge actors.bat  merge tonemap.bat  merge.bat  mergenorm.bat  out24alpha.xcf  out24rgb.xcf  skybox.xcf  skybox2.xcf  split.bat  tone24.xcf  tone8.xcf
Debug/bitmap/sun/: sun2.xcf
Debug/bitmap/textures/: grass.xcf  grass2.xcf  moon.xcf  sand.xcf  selection.xcf
Debug/mod/std/: agricult.json  audio.json  blocks.json  desert.json  items.json  mod.json  mushrooms.json  ores.json  tiles.json
Debug/shaders/: actor.frag  actor.vertex  atmosphere.glsl  blocks_depth.glsl  blocks_lava.glsl  blocks_reflection.glsl  blocks_runwater.glsl  blocks_water.glsl  blur.glsl  blurGaussian.glsl  bump.glsl  chat.frag  chat.vertex  clouds.glsl  compass.glsl  crepuscular.frag  crepuscular.vertex  culledalpha.glsl  degamma.glsl  degamma_voxel.glsl  depth.glsl  dumb.glsl  finalcolor.glsl  fs_ssao.glsl  fsterrain.glsl  fsterrainfog.glsl  gamma_voxel.glsl  gui.glsl  gui_color.glsl  gui_item.glsl  horizonfade.glsl  lensflare.glsl  lightw.glsl  minimap.glsl  moon.glsl  objects.frag  objects.vertex  particles.glsl  playerhand.glsl  playerhand_helditem.glsl  (+25 more)
cmake/: FindSDL2.cmake
common/: biomes.cpp  block.hpp  common.hpp  grid_walker_client.hpp  readonly_blocks.hpp
common/db/: blockdata.hpp  database.hpp  itemdata.hpp
ext/: CMakeLists.txt
ext/nanogui/: CMakeLists.txt
ext/nanogui/include/nanogui/: arraytexture.h  nanogui.h
ext/nanogui/src/: arraytexture.cpp
inc/: delegate.hpp
inc/LuaBridge/detail/: LuaRef.h  Stack.h
inc/SimplexNoise/include/: Simplex.h
inc/ThreadPool/: thread_pool.hpp
lib/: common.lib
lib/win64/: lua.lib
res/: cppcraft.rc  server.rc
server/: CMakeLists.txt  run.sh
server/common/: CMakeLists.txt  biomes.hpp  common.hpp  grid_walker.hpp  item.hpp  readonly_blocks.cpp  sectorblock.hpp
server/common/db/: blockdata.cpp  blockdb.hpp  itemdata.cpp  itemdb.hpp
server/src/: CMakeLists.txt  bipbuffer.hpp  client.cpp  client.hpp  server_main.cpp
src/: CMakeLists.txt  arch.cpp  atmosphere.cpp  atmosphere.hpp  block_clientside.cpp  blockmodels.cpp  blockmodels.hpp  blockmodels_crosses.cpp  blockmodels_cubes.cpp  blockmodels_doors.cpp  blockmodels_fences.cpp  blockmodels_ladders.cpp  blockmodels_lanterns.cpp  blockmodels_leafs.cpp  blockmodels_player.cpp  blockmodels_poles.cpp  blockmodels_stairs.cpp  blocks_bordered.cpp  blocks_bordered.hpp  blocks_vfaces.hpp  camera.cpp  camera.hpp  chat.cpp  chat.hpp  chunks.cpp  chunks.hpp  columns.cpp  columns.hpp  compiler_scheduler.hpp  compilers.cpp  compilers.hpp  compressor.cpp  compressor.hpp  drawq.cpp  drawq.hpp  drawq_rendergrid.cpp  flatland.hpp  flatlands.hpp  game.cpp  game.hpp  (+111 more)
src/generator/: blocks.cpp  blocks.hpp  items.cpp  object.hpp  objectq.cpp  objectq.hpp  oregen.cpp  oregen.hpp  postproc.cpp  postproc.hpp  random.hpp  terragen.cpp  terragen.hpp  terragen_objects.cpp
src/generator/biomegen/: biome.cpp  biome.hpp  biomegen.cpp  colortable.hpp
src/generator/objects/: basic_house.cpp  basic_tree.cpp  helpers.cpp  helpers.hpp  jungle_tree.cpp  mushrooms.cpp  mushrooms.hpp  volumetrics.cpp  volumetrics.hpp
src/generator/simulation/: auto_growth.cpp  auto_growth.hpp  simulator.cpp  simulator.hpp  timers.cpp  timers.hpp
src/generator/terrain/: helpers.cpp  helpers.hpp  noise.cpp  noise.hpp  poisson.cpp  poisson.hpp  t_desert.cpp  t_grass.cpp  t_jungle.cpp  t_snow.cpp  t_taiga.cpp  terrain.cpp  terrain.hpp  terrains.cpp  terrains.hpp
src/gui/: frontend_inventory.cpp  frontend_inventory.hpp  gui.cpp  gui.hpp  hotbar.hpp  item_renderer.cpp  item_renderer.hpp
src/items/: inventory.cpp  inventory.hpp  item.hpp
src/meshes/: vemitcross.cpp  vemitter.cpp
src/script/: interface.cpp  script.cpp  script.hpp
src/sound/: channel.cpp  channel.hpp  sound.cpp  sound.hpp  stream.cpp  stream.hpp  system.hpp
test/: CMakeLists.txt  mock_generator.cpp  mock_player.cpp  mock_precompq.cpp  mock_sectors.cpp  mock_stuff.cpp  test_gridwalker.cpp  test_lighting.cpp  test_readonly_blocks.cpp  test_sector.cpp
